# symbolic-lm

./: .gitignore  Cargo.toml  a.py  aaa.csv  cgp_fast.c  cgp_fast.html  cgp_fast.pyx  ggg.py  main.py  main111.py  main2.py  main3.py  main4.py  main5.py  maing.py  mainppp.py  maint.py  mainy.py  mainz.py  pyproject.toml  s.csv  setup.py
kcia/: Cargo.toml
kcia/.cargo/: config.toml
kcia/src/: main.rs
src/: lib.rs  main.rs
