[package]
name = "rs_cgp"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs_cgp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"
ndarray = "0.15"
rand = "0.8"
rayon = "1.10"
rustfft = "6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
