[package]
name = "kcia"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-datasets = { git = "https://github.com/huggingface/candle.git", version = "0.9.2" }
hf-hub = "0.4.3"
ndarray = { version = "0.15.6", features = ["blas"] }
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["system"] }
parquet = "57.3.0"
tqdm = "0.3.1"
rand = "0.8.5"